--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -6,21 +6,21 @@
 	<div class="dropdown sort-position">
 		<button class="btn dropdown-toggle" type="button" id="sort-drop" data-bs-toggle="dropdown"
 			aria-expanded="false">
-			<img class="headphone-icon" src="assets/img/chat_support.svg" />
+			<img class="headphone-icon" src="assets/img/chat_support.svg" alt="support"/>
 		</button>
 		<ul class="dropdown-menu sort-by" aria-labelledby="sort-drop">
 			<li><a class="dropdown-item">
 					<!-- <img class="icon" src="assets/img/email1.png" /> -->
-					<img class="icon" src="assets/img/email2.png" />
+					<img class="icon" src="assets/img/email2.png" alt="email"/>
 					<!-- <b>Support</b> -->
 					<a data-toggle="modal" data-target="#supportModal" (click)="showSupportModal()"><b>Support</b></a>
 
 				</a></li>
 			<li><a class="dropdown-item" href="javascript:void(0)">
-					<img class="icon" src="assets/img/whatsapp_icon.svg" />
+					<img class="icon" src="assets/img/whatsapp_icon.svg"alt=whatsapp />
 					<b>WhatsApp</b> </a></li>
 			<li><a class="dropdown-item" href="tel:080-45574050">
-					<img class="icon" src="assets/img/telephone.png" />
+					<img class="icon" src="assets/img/telephone.png" alt="telephone" />
 					<b>080-45574050</b> </a></li>
 			<!-- <a href="tel:8665562570">Call us at 866-556-2570</a> -->
 		</ul>
@@ -92,18 +92,19 @@
 				<ul class="follow-list">
 					<li>
 						<a target="_blank" href="https://www.facebook.com/finizonapp"><img
-								src="assets/img/facebook.svg"></a>
+								src="assets/img/facebook.svg" alt="fb"></a>
 					</li>
 					<li>
 						<a target="_blank" href="https://www.instagram.com/finizonapp/"><img
-								src="assets/img/instagram.svg"></a>
+								src="assets/img/instagram.svg" alt="instagram"></a>
 					</li>
 					<li>
 						<a target="_blank" href="https://www.linkedin.com/company/finizonapp/"><img
-								src="assets/img/linkedin.svg"></a>
+								src="assets/img/linkedin.svg" alt="linkedin"></a>
 					</li>
 					<li>
-						<a target="_blank" href="https://twitter.com/finizonapp"><img src="assets/img/twitter.svg"></a>
+						<a target="_blank" href="https://twitter.com/finizonapp"><img 
+							src="assets/img/twitter.svg" alt="twitter"></a>
 					</li>
 				</ul>
 			</div>
@@ -112,7 +113,7 @@
 				<ul class="footer-link">
 
 					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home"
-							class="black">Partner Registration</a></li>
+						class="black">Partner Registration</a></li>
 					<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
 				</ul>
 			</div>
@@ -135,7 +136,7 @@
 				<h5 class="footer-head">About Us</h5>
 				<ul class="footer-link">
 					<li><a target="_blank" href=" https://finizon.com" class="black">Know more</a></li>
-					<li><a href="#" (click)="scrollToTerms()">Terms of Use</a></li>
+					<li><a href="javascript:void(0)" (click)="scrollToTerms()">Terms of Use</a></li>
 
 					<li><a target="_blank" href="https://finixoninsurancetips.blogspot.com/" class="black">Blog</a></li>
 				</ul>
@@ -171,7 +172,7 @@
 				<h5 class="footer-head">About Us</h5>
 				<ul class="footer-link">
 					<li><a target="_blank" href=" https://finizon.com" class="black">Know more</a></li>
-					<li><a href="#" (click)="scrollToTerms()">Terms of Use</a></li>
+					<li><a href="javascript:void(0)" (click)="scrollToTerms()">Terms of Use</a></li>
 
 					<li><a target="_blank" href="https://finixoninsurancetips.blogspot.com/" class="black">Blog</a></li>
 				</ul>
