--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -160,18 +160,18 @@
       <ul class="nav-social">
         <li>
           <a target="_blank" href="https://www.facebook.com/finizonapp"><img
-              src="assets/img/facebook.svg"></a>
+              src="assets/img/facebook.svg" alt="fb"></a>
         </li>
         <li>
           <a target="_blank" href="https://www.instagram.com/finizonapp/"><img
-              src="assets/img/instagram.svg"></a>
+              src="assets/img/instagram.svg" alt="instagram"></a>
         </li>
         <li>
           <a target="_blank" href="https://www.linkedin.com/company/finizonapp/"><img
-              src="assets/img/linkedin.svg"></a>
+              src="assets/img/linkedin.svg" alt="linkedin"></a>
         </li>
         <li>
-          <a target="_blank" href="https://twitter.com/finizonapp"><img src="assets/img/twitter.svg"></a>
+          <a target="_blank" href="https://twitter.com/finizonapp"><img src="assets/img/twitter.svg" alt="twitter"></a>
         </li>
       </ul>
       <div class="nav-copyright">
