--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -127,7 +127,9 @@
       <!-- commented by sw -->
       <!-- <li><a [routerLink]="['/']">Credit</a></li> -->
 
-      <li class="mobile"><a (click)="GotoWealth()">Wealth</a></li>
+      <!-- <li class="mobile"><a (click)="GotoWealth()">Wealth</a></li> -->
+      <li class="mobile"><a  (click)="customerinvestmentlink()">Wealth</a></li>
+
       <li class="mobile"><a data-bs-toggle="collapse" href="#Toolscollapse1" role="button" aria-expanded="false"
           aria-controls="collapseExample" class="drop-menu">Tools</a></li>
       <div class="collapse" id="Toolscollapse1">
