--- a/src/app/views/pages/lead-modal/lead-modal.component.html
+++ b/src/app/views/pages/lead-modal/lead-modal.component.html
@@ -1,12 +1,10 @@
-
-
-<!-- modal part latest-->
-<div class="modal fade" id="supportModal" tabindex="-1" role="dialog" aria-labelledby="supportModallLabel"
+<!-- lead modal-->
+<div class="modal fade" id="leadModal" tabindex="-1" role="dialog" aria-labelledby="leadModallLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="closeicon">
-        <button type="button" class="close" (click)="hideSupportModal()" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" (click)="hideleadModal()" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
 
@@ -14,21 +12,11 @@
       <div class="modal-body">
 
 
-        <div class="support-title">Get Additional Support</div>
-        <!-- <div class="container"> -->
+        <div class="support-title">Please Submit The Below Information</div>
+                <!-- <div class="container"> -->
         <form [formGroup]="myForm">
           <div class="details">
-
-            <div class="up-in-toggle">
-              <input type="radio" id="switch_left" formControlName="category" value="INSURANCE" />
-              <label for="switch_left">INSURANCE</label>
-              <input type="radio" id="switch_right" formControlName="category" value="INVESTMENT" />
-              <label for="switch_right">INVESTMENT</label>
-
-            </div>
-            <div *ngIf="myForm.controls['category'].invalid && (myForm.controls['category'].touched || isSubmitted)"
-              class="text-danger">
-              Pleae select the option* </div>
+<!--    -->
 
 
             <div class="mb-3">
@@ -60,7 +48,7 @@
                 *ngIf="myForm.controls['mobileNumber'].invalid && (myForm.controls['mobileNumber'].touched || isSubmitted)"
                 class="text-danger">
                 Please enter a valid 10-digit mobile number starting with 6-9
-              </div>  
+              </div>
             </div>
 
             <div class="mb-3 comments">
@@ -82,6 +70,33 @@
 
         </form>
       </div>
+
+    </div>
+  </div>
+</div>
+
+
+<!-- Thank you Modal -->
+<div class="modal fade" id="thankYouModal" tabindex="-1" role="dialog" aria-labelledby="thankYouModallLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="closeicon">
+        <button type="button" class="close" (click)="hideThankYouModal()" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
+      </div>
+      <div class="modal-body">
+
+                <!-- <img class="thank-you" src="../../../../assets/img/thank-you.png" alt=""> -->
+      
+
+                <div class="modal-body d-flex flex-column align-items-center">
+                  <div class="support-title">Thank you for your interest, our representative will contact you soon</div>
+                  <img class="thank-you" src="../../../../assets/img/thank-you.png" alt="">
+                </div>
+      
 
     </div>
   </div>
