--- a/src/app/views/pages/support-modal/support-modal.component.html
+++ b/src/app/views/pages/support-modal/support-modal.component.html
@@ -86,3 +86,31 @@
     </div>
   </div>
 </div>
+
+
+<!-- Thank you Modal -->
+<div class="modal fade" id="thankYouSupportModal" tabindex="-1" role="dialog" aria-labelledby="thankYouModallLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="closeicon">
+        <button type="button" class="close" (click)="hideThankYousupportModal()" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
+      </div>
+      <div class="modal-body">
+
+        <!-- <img class="thank-you" src="../../../../assets/img/thank-you.png" alt=""> -->
+
+
+        <div class="modal-body d-flex flex-column align-items-center">
+          <div class="support-title">Thank you for your interest, our representative will contact you soon.</div>
+          <img class="thank-you" src="../../../../assets/img/thank-you.png" alt="">
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
