--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -122,7 +122,7 @@
     </ul>
     <ul class="hidden-lg scrollmenu">
       <li [hidden]="!isLoggedIn" [routerLink]="['/profile-details']"><a>My Profile</a></li>
-      <li class="mobile"><a (click)="GotoInsurance()">Insure</a></li>
+      <li class="mobile"><a href="http://65.1.237.83:6800" target="_blank">Insure</a></li>
 
       <!-- commented by sw -->
       <!-- <li><a [routerLink]="['/']">Credit</a></li> -->
