--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 </div>
-<div *ngIf="!ShowLoader">
+<div #scrollContainer *ngIf="!ShowLoader" >
   <div class="container pb-3">
     <!-- Banners Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -714,7 +714,7 @@
 
     </div>
 
-    <div class="container mt-5 pt-50 "  id="top">
+    <div class="container mt-5 pt-50 ">
       <div class="cta">
         <div class="row align-items-center">
           <div class="col-lg-2 col-3 col-sm-2 mob-center">
@@ -724,7 +724,7 @@
             <h3>Grow your family's investment in one place</h3>
           </div>
           <div class="col-lg-3 col-12 col-sm-3">
-            <button class="nav-link btn btn-primary theme-button m0-auto" onclick="scrollToTop()">Get Started</button>
+            <button class="nav-link btn btn-primary theme-button m0-auto"  >Get Started</button>
           </div>
         </div>
       </div>
