--- a/src/app/views/pages/support-modal/support-modal.component.css
+++ b/src/app/views/pages/support-modal/support-modal.component.css
@@ -178,6 +178,50 @@ textarea.form-control {
   /* margin-top: -15% !important; */
 }
 
+ 
+#thankYouSupportModal .modal-dialog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: hidden !important;
+  max-width: 520px !important;
+
+  /* max-height: 1200px !important; */
+  /* border: 1px solid white; */
+  border-radius: 10px;
+}
+#thankYouSupportModal .modal-content{
+  /* border: 1px solid red; */
+  max-width:520px !important;
+  /* height: 700px !important; */
+  height:100%;
+  border-radius: 25px;
+
+
+}
+#thankYouSupportModal  .modal-body{
+
+  padding: 30px 30px 30px 30px;
+
+}
+#thankYouSupportModal  .details{
+  height:100%;
+  /* height: 560px !important; */
+  /* margin-top: -% !important; */
+  border: 1px solid #f2f0f0;
+  padding: 30px 30px 10px 30px;
+  box-shadow: -10px -10px 20px #FFFFFF, 8px 8px 24px rgba(210, 210, 210, 0.5);
+  border-radius: 25px;
+  margin-top: -3%;
+
+}
+
+#thankYouSupportModal .support-title{
+  text-align: center;
+  margin-top: -12% !important;
+  /* margin-bottom: 5%; */
+  font-size: 20px;
+}
 
 @media only screen and (max-width: 767px) {
   .modal-body{
@@ -208,5 +252,15 @@ textarea.form-control {
   .submit{
     margin-bottom: 10% !important;
     /* margin-top: -15% !important; */
+  }
+  .closeicon .close{
+    
+    margin-left: 85%;
+    
+  }
+  #thankYouModal  .closeicon .close{
+    
+    margin-left: 70;
+    
   }
 }
