--- a/src/app/views/pages/support-modal/support-modal.component.html
+++ b/src/app/views/pages/support-modal/support-modal.component.html
@@ -106,7 +106,7 @@
 
         <div class="modal-body d-flex flex-column align-items-center">
           <div class="support-title">Thank you for your interest, our representative will contact you soon.</div>
-          <img class="thank-you" src="../../../../assets/img/thank-you.png" alt="">
+          <img class="thank-you" src="../../../../assets/img/green tick thankyou.png" alt="">
         </div>
 
 
