--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -71,7 +71,7 @@
 
 
           <li (click)="handleOpenCloseNav()">
-            <a class="nav-link active pe-0 nav-toggle" href="javascript:void(0)">
+            <a class="nav-link pe-0 nav-toggle" href="javascript:void(0)">
               <img src="assets/img/menu.svg" alt="menu" class="menu-ic">
             </a>
           </li>
@@ -157,7 +157,7 @@
     <div class="nav-footer">
       <div class="d-flex term-link">
         <span>Share & Refer</span>
-        <span><a  routerLink="/terms-of-use" >Terms & Conditions</a> </span>
+        <span><a  routerLink="/terms-of-use" target="_blank">Terms & Conditions</a> </span>
         <!-- <span><a  routerLink="/terms-of-use#top">Terms & Conditions</a> </span> -->
 
       </div>
