--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 </div>
-<div #scrollContainer *ngIf="!ShowLoader" >
+<div #scrollContainer *ngIf="!ShowLoader">
   <div class="container pb-3">
     <!-- Banners Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -87,7 +87,7 @@
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
                     <a style="text-decoration: none;" target="_blank" href="https://forms.gle/J1WexoLfsLAoMrAp7">
-                    <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                      <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
                   </div>
@@ -121,11 +121,12 @@
                     <!-- <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a> -->
-                    <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/signup">
+                    <a style="text-decoration: none;" target="_blank"
+                      href="https://ins.finizoninsurance.com/partner/signup">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
                     <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
-                    <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                      <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
                   </div>
@@ -145,7 +146,7 @@
 
     <div class="container pt-70 common-pt-50">
       <div class="slick-carousel index-product">
-        <div class="row ">
+        <div class="row">
           <div class="col col-6" *ngFor="let insurence of InsurencedataList">
             <div data-toggle="modal" data-target="#leadModal" class="loan-type"
               (click)="InsurancetRouterUrl(insurence)">
@@ -159,8 +160,8 @@
 
     <div class="container mt-5 common-mt-3">
       <div class="slick-carousel index-product">
-        <div class="row flex-row">
-          <div class="col col-6" *ngFor="let credit of CreditdataList">
+        <div class="row">
+          <div class="col col-6 " *ngFor="let credit of CreditdataList">
             <div data-toggle="modal" data-target="#leadModal" class="loan-type" (click)="CreditRouterUrl(credit)">
               <img src="{{credit.logo}}" alt="l1">
               <p [innerHTML]="credit?.name"></p>
@@ -170,12 +171,12 @@
       </div>
     </div>
 
-   
+
 
     <div class="container mt-5 common-mt-3">
       <div class="slick-carousel index-product">
-        <div class="row flex-row">
-          <div class="col col-6 " *ngFor="let wealth of wealthdataList">
+        <div class="row mb-producthide">
+          <div class="col col-6 " *ngFor="let wealth of wealthdataList?.slice(0,5)">
             <div class="loan-type" (click)="wealthtRouterUrl(wealth?.path)">
               <img src="{{wealth.logo}}" alt="l1">
               <p>{{wealth.name}}</p>
@@ -184,6 +185,28 @@
         </div>
       </div>
     </div>
+
+    <!-- mobile view -->
+    <!-- <div class="container hidden-lg pt-70 mt-5 mb-3 common-mt-3 more-product money-invest loan-opt">
+      <div class="row align-items-center">
+        <div class="col" *ngFor="let insurence of InsurencedataList" data-toggle="modal" data-target="#supportModal"
+          (click)="InsurancetRouterUrl(insurence)">
+          <div class="money-mng">
+            <img src="{{insurence.logo}}" alt="l1">
+            <p>{{insurence.name}}</p>
+          </div>
+        </div>
+
+        <div class="col" *ngFor="let credit of CreditdataList" data-toggle="modal" data-target="#supportModal"
+        (click)="InsurancetRouterUrl(credit)">
+        <div class="money-mng">
+          <img src="{{credit.logo}}" alt="l1">
+          <p>{{credit.name}}</p>
+        </div>
+      </div>
+      
+
+    </div> -->
 
     <div class="container pt-70 why-finizon">
       <div class="row align-items-center about">
@@ -429,13 +452,14 @@
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                   </a> -->
 
-                  <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/signup">
+                  <a style="text-decoration: none;" target="_blank"
+                    href="https://ins.finizoninsurance.com/partner/signup">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
-                    </a>
+                  </a>
 
                   <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
-                  <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
-                  </a>  
+                    <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                  </a>
 
                 </div>
 
@@ -467,20 +491,20 @@
               <div *ngFor="let founder of founders.slice(0, 3)">
                 <!-- <img class="clkprofile_Photo" [src]="founder.img"[class.selected]="selectedFounder" (click)="showDetails(founder)" /> -->
                 <img class="clkprofile_Photo" [src]="founder.img" [class.selected]="isSelected(founder)"
-                  (click)="showDetails(founder)" alt="founderimg"/>
+                  (click)="showDetails(founder)" alt="founderimg" />
               </div>
             </div>
             <div class="founder-column hidden-xs hidden-md ">
               <div *ngFor="let founder of founders.slice(3)">
                 <img class="clkprofile_Photo" [src]="founder.img" [class.selected]="isSelected(founder)"
-                  (click)="showDetails(founder)" alt="founderimg"/>
+                  (click)="showDetails(founder)" alt="founderimg" />
               </div>
             </div>
             <div class="founder-row hidden-lg">
               <div class="founder-row-container">
                 <div *ngFor="let foundermob of foundersmob">
                   <img class="clkprofile_Photo" [src]="foundermob.img" [class.selected]="isSelected(foundermob)"
-                    (click)="showDetails(foundermob)" alt="founderimg"/>
+                    (click)="showDetails(foundermob)" alt="founderimg" />
                 </div>
               </div>
             </div>
@@ -494,7 +518,7 @@
 
                 <div *ngIf="selectedFounder">
                   <div class="profile ">
-                    <img class="profile_Photo" [src]="selectedFounder.image" alt="founderimg"/>
+                    <img class="profile_Photo" [src]="selectedFounder.image" alt="founderimg" />
                     <div class="profile_details">
                       <div class="name">{{ selectedFounder.name }}</div>
                       <div class="designation">{{ selectedFounder.title }}</div>
@@ -724,7 +748,8 @@
             <h3>Grow your family's investment in one place</h3>
           </div>
           <div class="col-lg-3 col-12 col-sm-3">
-            <button class="nav-link btn btn-primary theme-button m0-auto"  >Get Started</button>
+            <a href="http://65.1.237.83/"class="nav-link btn btn-primary theme-button m0-auto" >Get Started</a>
+            
           </div>
         </div>
       </div>
@@ -733,6 +758,6 @@
 
   </div>
 </div>
-<app-lead-modal #leadModal >
+<app-lead-modal #leadModal>
   <!-- Add the content for the support modal here -->
 </app-lead-modal>
