--- a/src/app/views/pages/lead-modal/lead-modal.component.html
+++ b/src/app/views/pages/lead-modal/lead-modal.component.html
@@ -11,7 +11,7 @@
       <div class="modal-body">
 
 
-        <div class="support-title">Please Submit The Below Information</div>
+        <div class="support-title">Please fill the form below</div>
         <!-- <div class="container"> -->
         <form [formGroup]="myForm">
           <div class="details">
@@ -95,7 +95,7 @@
 
         <div class="modal-body d-flex flex-column align-items-center">
           <div class="support-title">Thank you for your interest, our representative will contact you soon.</div>
-          <img class="thank-you" src="../../../../assets/img/thank-you.png" alt="">
+          <img class="thank-you" src="../../../../assets/img/green tick thankyou.png" alt="">
         </div>
 
 
