--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -66,24 +66,6 @@
 	</div>
 </div>
 
-<!-- customer modal -->
-<div class="modal fade" id="mob_signup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-body">
-				<div class="col-lg-8 col-sm-6">
-					<a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
-						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
-					</a>
-					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
-						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
-					</a>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
 
 <section class="footer" id="footer">
 
@@ -243,6 +225,39 @@
 </section>
 
 
+<!-- customer modal -->
+<div class="modal fade" id="mob_signup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-body">
+				<div class="col-lg-8 col-sm-6">
+					<a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
+					</a>
+					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
+					</a>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<!-- customer modal for mobile sticky -->
+
+	<!-- *******ORG******* -->
+	<!-- <div class="row">
+	  <div class="col-6">
+		<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+		  data-bs-target="#mob_signup">Customer</a>
+	  </div>
+	  <div class="col-6">
+		<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+		  data-bs-target="#mob_signin">Partner</a>
+	  </div>
+	</div> -->
+ 
 
 <!-- otp Modal -->
 <!-- <div class="modal fade" id="Footerotp-screen" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
