--- a/src/app/views/shared/header/header.component.css
+++ b/src/app/views/shared/header/header.component.css
@@ -2,21 +2,31 @@
 	width: 70%;
 }
 .header-nav .nav-link{
-	padding: 10px 5px 10px!important;
+	padding: 10px 5px !important;
 	font-size: 18px!important;
 	font-weight: 600;
 	color: #465A65!important;
-  opacity: 0.7;
+  /* opacity: 0.7; */
+  width: max-content;
 }
-.header-nav .nav-link.active {
+/* .header-nav .nav-link.active {
   opacity: 1;
-}
+} */
 .navbar-nav .nav-link.theme-button{
     color: #fff !important;
 
     /* test */
     /* width: 160px !important; */
 }
+/* .navbar-expand-sm {
+  width: 100%;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  position: fixed;
+  background: #bfe6ec;
+  z-index: 13;
+  padding: 0;
+} */
 .menu-ic{
 	width: 30px;
 }
@@ -70,11 +80,24 @@
 	font-size: 12px;
 	margin-bottom: 10px;
 }
+.header-mobile{
+  border-radius: 0 8px 8px 0;
+  border-left: none;
+}
+.selectt .form-select {
+  padding-top: 0.75rem;
+  font-weight: 500;
+  background-color: #efefef;
+  color: #858585;
+  border-radius: 8px 0 0 8px;
+}
 .up-in-toggle {
-	padding: 5px 0px;
+	padding: 3px 0px;
 	border: 1px solid #00A3B1;
 	border-radius: 8px;
 	margin-bottom: 10px;
+  /* margin-bottom: 1rem; */
+
 }
 .up-in-toggle input {
 	clip: rect(0, 0, 0, 0);
@@ -155,12 +178,13 @@
 	.mobile-toggle img{
 		width: 80%;
 	}
-	#site-wrapper {
+	/* #site-wrapper {
 		z-index: 11;
-	}
+	} */
 	.mobile{
     margin-left: 2% !important;
-  } }
+  }
+ }
 
 @media only screen and (min-width: 1350px) and (max-width: 1370px){
 	.header-nav .nav-link {
@@ -171,8 +195,12 @@
 		width: 65%;
 	}
 	.navbar-nav .nav-link.theme-button {
-		width: 150px;
-		font-size: 14px!important;
+		/* width: 150px;
+		font-size: 14px!important; */
+
+    width: auto;
+    font-size: 14px !important;
+    padding: 11px 20px !important;
 	}
     .nav-link.pe-0.nav-toggle{
         padding-right: 0px !important;
@@ -254,25 +282,25 @@
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         overflow: hidden;
-        /* -webkit-transform: translateX(0); */
+        -webkit-transform: translateX(0);
         -ms-transform: translateX(0);
-        /* transform: translateX(0); */
-        /* -webkit-transform: translateX(0) translateZ(0); */
-        /* transform: translateX(0) translateZ(0); */
+        transform: translateX(0);
+        -webkit-transform: translateX(0) translateZ(0);
+        transform: translateX(0) translateZ(0);
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
         -webkit-transition: all 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
         transition: all 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
-        z-index: 10;
+        z-index: 14;
       }
       
       .menu.show-nav {
-        /* -webkit-transform: translateX(-300px); */
-        /* -ms-transform: translateX(-300px); */
-        /* transform: translateX(-300px); */
-        /* -webkit-transform: translateX(-300px) tranlateZ(0); */
+        -webkit-transform: translateX(-300px);
+        -ms-transform: translateX(-300px);
+        transform: translateX(-300px);
+        -webkit-transform: translateX(-300px) tranlateZ(0);
         -ms-transform: translateX(-300px) tranlateZ(0);
-        /* transform: translateX(-300px) tranlateZ(0); */
+        transform: translateX(-300px) tranlateZ(0);
         -webkit-transform: translate3d(-300px, 0, 0);
         transform: translate3d(-300px, 0, 0);
       }
@@ -358,20 +386,20 @@
       
       .nav-toggle {
       /*  position: fixed;
-        top: 30px;
-        right: 30px;*/
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-        /* -webkit-transform: translateX(0); */
-        -ms-transform: translateX(0);
-        /* transform: translateX(0); */
-        /* -webkit-transform: translateX(0) translateZ(0); */
-        /* transform: translateX(0) translateZ(0); */
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-        /* -webkit-transition: all 0.4s cubic-bezier(0.32, 1.25, 0.375, 1.15); */
-        transition: all 0.4s cubic-bezier(0.32, 1.25, 0.375, 1.15);
-        z-index: 11;
+          top: 30px;
+          right: 30px;*/
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transform: translateX(0) translateZ(0);
+    transform: translateX(0) translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: all 0.4s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+    transition: all 0.4s cubic-bezier(0.32, 1.25, 0.375, 1.15);
+    z-index: 11;
       }
       
       .nav-toggle span {
