--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -478,11 +478,11 @@
               <div class="firstpoint">
                 <link rel="stylesheet"
                   href="https://finizon.com/wp-content/plugins/elementor/assets/css/widget-icon-list.min.css">
-                <ul class="elementor-icon-list-items">
+                <ul class="elementor-icon-list-items" style="list-style: none;">
                   <li class="elementor-icon-list-item">
                     <span class="elementor-icon-list-icon">
 
-                      <img src="assets/img/right-arrow.png" class="w-100 right_arrow_img" alt="rightarrow">
+                      <img src="assets/img/right-arrow.png" class="right_arrow_img" alt="rightarrow">
 
                     </span>
                     <span class="elementor-icon-list-text">Make decisions closely with the
@@ -496,11 +496,11 @@
             <div
               class="elementor-element elementor-element-9354ecf animated-slow elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list animated fadeIn">
               <div class="elementor-widget-container firstpoint">
-                <ul class="elementor-icon-list-items">
+                <ul class="elementor-icon-list-items" style="list-style: none;">
                   <li class="elementor-icon-list-item">
                     <span class="elementor-icon-list-icon">
 
-                      <img src="assets/img/right-arrow.png" class="w-100 right_arrow_img" alt="rightarrow">
+                      <img src="assets/img/right-arrow.png" class="right_arrow_img" alt="rightarrow">
 
                     </span>
                     <span class="elementor-icon-list-text">Find the right financial products and
@@ -515,10 +515,10 @@
               class="elementor-element elementor-element-7df21f2 animated-slow elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list animated fadeIn">
               <div class="elementor-widget-container firstpoint">
                 <ul class="elementor-icon-list-items">
-                  <li class="elementor-icon-list-item">
+                  <li class="elementor-icon-list-item" style="list-style: none;">
                     <span class="elementor-icon-list-icon">
 
-                      <img src="assets/img/right-arrow.png" class="w-100 right_arrow_img" alt="rightarrow">
+                      <img src="assets/img/right-arrow.png" class="right_arrow_img" alt="rightarrow">
 
                     </span>
                     <span class="elementor-icon-list-text">Never miss out on the best available
