--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -15,7 +15,9 @@
               routerLink="/overview">Dashboard</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a>
+            <!-- <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a> -->
+            <a class="nav-link" href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a>
+
           </li>
           <!--ORG code-->     
           <!-- <li class="nav-item">
@@ -122,7 +124,9 @@
     </ul>
     <ul class="hidden-lg scrollmenu">
       <li [hidden]="!isLoggedIn" [routerLink]="['/profile-details']"><a>My Profile</a></li>
-      <li class="mobile"><a href="http://65.1.237.83:6800" target="_blank">Insure</a></li>
+      <!-- <li class="mobile"><a href="http://65.1.237.83:6800" target="_blank">Insure</a></li> -->
+      <li class="mobile"><a href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a></li>
+
 
       <!-- commented by sw -->
       <!-- <li><a [routerLink]="['/']">Credit</a></li> -->
