--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -16,7 +16,7 @@
           </li> -->
           <li class="nav-item">
             <!-- <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a> -->
-            <a class="nav-link" href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a>
+            <a class="nav-link" href="https://finizoninsurance.com" target="_blank">Insure</a>
 
           </li>
           <!--ORG code-->     
@@ -125,7 +125,7 @@
     <ul class="hidden-lg scrollmenu">
       <li [hidden]="!isLoggedIn" [routerLink]="['/profile-details']"><a>My Profile</a></li>
       <!-- <li class="mobile"><a href="http://65.1.237.83:6800" target="_blank">Insure</a></li> -->
-      <li class="mobile"><a href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a></li>
+      <li class="mobile"><a href="https://finizoninsurance.com" target="_blank">Insure</a></li>
 
 
       <!-- commented by sw -->
